--- a/js-ejercicios/piedra-papel-tijeras-advance/style.css
+++ b/js-ejercicios/piedra-papel-tijeras-advance/style.css
@@ -4,23 +4,40 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Jura:wght@300..700&family=Nata+Sans:wght@100..900&display=swap');
 
-:root{
-    --fondo-info: #9ddd8e;
-
-    --fondo-game:#5563d99e;
-
-
-    --primary-color: #d73838;
-    --secundary-color: #2098ed8a;
+:root{  
+    /*
+        mas: FAE3AC
+        menos: 01344F
+        detalle: D12128
+        fondo:#1a1a1a
+        fonde detalle:#88b0b4
+    */
+    --background-color: #1a1a1a;
+    --details:#88b0b4;
+    --primary-color: #FAE3AC;
+    --secundary-color: #01344F;
+    --detail-color:#D12128;
     --fuente-game: "Bitcount Grid Double", system-ui;
     --fuente-elegante: "Jura", sans-serif;
 }
 
-h1, h2{
+
+h2{
+    color: #01344F;
     margin: 0;
     padding: 5px;
+    font-size: 3em;
 }
 
+h1{
+    color: #01344F;
+    margin: 0;
+    padding: 5px;
+    font-size: 6em;
+}
+body{
+    background-color: var(--background-color);
+}
 .data-section{
     display: flex;
     flex-direction: column;
@@ -30,7 +47,7 @@ h1, h2{
     font-size: x-large;
     font-weight: 100;
 
-    background-color:var(--fondo-info);
+    background-color:var(--primary-color    );
     border: 5px;
     border-radius: 10px;
     margin: 25px;
@@ -38,7 +55,7 @@ h1, h2{
 
 
 .main-game{
-    background-color: var(--fondo-game);
+    background-color: var(--secundary-color);
     display: flex;
     flex-direction: column;
 
@@ -50,6 +67,7 @@ h1, h2{
 .info-text{
     font-family:var(--fuente-elegante);
     font-size: xx-large;
+    color:var(--primary-color);
 }
 
 .select-figure{
@@ -60,16 +78,20 @@ h1, h2{
 
 
 .button-game{
-    background-color:var(--secundary-color);
-    color: var(--primary-color);
+    background-color:var(--detail-color);
+    color: var(--details);
     border-radius: 15px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: xx-large;
     padding: 13px;
     margin: 15px;
 }
+.button-frame:hover{
+    padding: 5px;
+    border-radius: 15px;
+    box-shadow: inset 0 0 0 20px var(--background-color); /* Colored "padding" */
 
+}
 .button-game:hover{
-    margin: 25px;
-    background-color: aqua;
+    background-color: var(--primary-color);
 }
