--- a/js-ejercicios/piedra-papel-tijeras-advance/style.css
+++ b/js-ejercicios/piedra-papel-tijeras-advance/style.css
@@ -49,10 +49,10 @@ h1{
     /* From https://css.glass */
     background: rgba(239, 204, 143, 0.48);
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 30px rgba(24, 21, 21, 0.1);
     backdrop-filter: blur(11px);
     -webkit-backdrop-filter: blur(11px);
-    border: 1px solid rgba(239, 204, 143, 0.3);
+    border: 1px solid rgba(130, 105, 61, 0.3);
     transition: color 2s ease-in;
 
 }
@@ -77,7 +77,7 @@ body{
     font-size: x-large;
     font-weight: 100;
 
-    background-image: url(/js-ejercicios/piedra-papel-tijeras-advance/assets/background.png);
+    background-image: url(../piedra-papel-tijeras-advance/assets/background.png);
     border: 5px;
     border-radius: 10px;
     margin: 25px;
@@ -104,29 +104,55 @@ body{
     background-color: var(--secundary-color);
     display: flex;
     flex-direction: column;
+    justify-content:space-around;
 
     border-radius: 8px;
     border-width: 5px;
     border-color: var(--primary-color);
+    
+    width: 40%;
+    border-radius: 10px;
+    padding: 15px;
 
-        width: 40%;
 
 }
 
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .info-text{
     font-family:var(--fuente-elegante);
     font-size: xx-large;
     color:var(--primary-color);
     border-style: dashed;
     padding: 10px;
+    width: 50%;
+    text-align: center;
 }
 
 .select-figure{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-around;
 }
 
+
+.player{
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    border-color: var(--primary-color);
+    border-style: dashed;
+    justify-content:space-around;
+    padding: 5%;
+    margin: 30px;
+
+        border-radius: 15px;
+    border-width: 18px;
+}
 
 .buttonGame{
     background-color:var(--detail-color);
@@ -136,12 +162,13 @@ body{
     font-size: xx-large;
     padding: 13px;
     margin: 15px;
+    width: 90%;
 }
+
 .button-frame:hover{
     padding: 5px;
     border-radius: 15px;
     box-shadow: inset 0 0 0 20px var(--background-color); /* Colored "padding" */
-
 }
 
 .buttonGame:hover{
@@ -149,11 +176,14 @@ body{
 }
 
 .select-option{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     border-radius: 10px;
     border-style: double;
     border-color: var(--primary-color);
     background-color: var(--background-color);
-
 }
 
 .select-option:hover{
@@ -163,9 +193,10 @@ body{
 
 .result-game{
     border-color: var(--detail-color);
+    border-radius: 15px;
     border-style: groove;
     background-color: var(--secundary-color);
-    width: 50%;
+    width: 45%;
     padding: 15px;
 }
 
@@ -181,7 +212,7 @@ body{
 
 .result-text{
     font-family: var(--fuente-game);
-    font-size: 2em;
+    font-size: 3em;
     color: var(--primary-color);
 
     border-style: dotted;
